fix: definir o valor total de uma compra no backend
mandar o valor total da compra em uma requisição do frontend permite ao usuário manipular o valor da compra que será salvo no banco de dados
