# backend/src/swagger-doc.json
@@ -143,16 +143,22 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/ModeloCompraSwagger"
+              "$ref": "#/definitions/Compra"
             }
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "201": {
             "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -165,7 +171,7 @@
     }
   },
   "definitions": {
-    "ModeloCompraSwagger": {
+    "Compra": {
       "type": "object",
       "properties": {
         "eventoId": {
@@ -175,14 +181,6 @@
         "qtde_ingressos": {
           "type": "number",
           "example": 3
-        },
-        "valor_total": {
-          "type": "number",
-          "example": 32.5
-        },
-        "status": {
-          "type": "string",
-          "example": "Pago"
         },
         "forma_pagamento": {
           "type": "string",
